Book entity modified, comment added? transactional added to service