@@ -16,6 +16,7 @@ import ru.pipko.otus.homework.library.domain.Author;
 import ru.pipko.otus.homework.library.domain.Book;
 import ru.pipko.otus.homework.library.domain.Genre;
 
+import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.*;
@@ -78,8 +79,8 @@ class BooksEditorServiceImplTest {
         final Genre genre1 = new Genre(1L, "Genre1");
         final Author author2 = new Author(2L, "Author2");
         final Genre genre2 = new Genre(2L, "Genre2");
-        final Book bookForUpdateCheck = new Book(1L, "Book1", List.of(author1) , List.of(genre1));
-        final Book bookExpected = new Book(1L, "New name", List.of(author2), List.of(genre2));
+        final Book bookForUpdateCheck = new Book(1L, "Book1", List.of(author1) , List.of(genre1), Collections.emptyList());
+        final Book bookExpected = new Book(1L, "New name", List.of(author2), List.of(genre2), Collections.emptyList());
 
         Mockito.when(bookJdbcDao.getById(1)).thenReturn(bookForUpdateCheck);
         Mockito.when(authorEditorService.getAuthorById("2")).thenReturn(author2);
@@ -99,7 +100,7 @@ class BooksEditorServiceImplTest {
 
         final Author author1 = new Author(1L, "Author1");
         final Genre genre1 = new Genre(1L, "Genre1");
-        final Book bookExpected = new Book(1L, "Book1", List.of(author1), List.of(genre1));
+        final Book bookExpected = new Book(1L, "Book1", List.of(author1), List.of(genre1), Collections.emptyList());
 
         Mockito.when(bookJdbcDao.getById(1)).thenReturn(bookExpected);
         Mockito.when(evaluatingDataService.isTextNotNullAndNotBlank(Mockito.any())).thenReturn(true);
